Writethrough for 25 June 2023

--- a/newsletter/2023-06-25.md
+++ b/newsletter/2023-06-25.md
@@ -1,81 +1,43 @@
-# tktktktktk
+# Tokenomics check
 ## #Web3Weekly: June 18-24, 2023
 
-*Launching a new token? Our affiliate Bitbond can help. Their [intuitive platform](https://tokentool.bitbond.com) for creating tokens takes you through the process in minutes. No software development experience needed. There's even a 10% discount for #Web3Weekly readers if you enter the code QEHECMGR at checkout. [Try Bitbond today!](https://tokentool.bitbond.com/)*
+**For the first time in two years,** bitcoin's valuation represented [more than half](https://www.fxstreet.com/cryptocurrencies/news/bitcoin-dominance-hits-two-year-high-at-51-jeopardizing-altcoin-gains-202306211302) the global token market on Wednesday.
 
-**Don't look now,** but for the first time in two years, bitcoin's valuation represented [more than half](https://www.fxstreet.com/cryptocurrencies/news/bitcoin-dominance-hits-two-year-high-at-51-jeopardizing-altcoin-gains-202306211302) the global token market on Wednesday.
+Honestly, the persistence of so-called "bitcoin dominance" has me re-thinking the future of web3 a bit.
 
-<!-- Riff...
+I used to think that a maturation of web3 would necessarily lead to a more diversified mix of tokens with significant market share competing with one another. But now I increasingly suspect a concentrated market is here to stay for the long-term, with everyone just building on top of the couple of tokens that truly have significant share.
 
-Does web3 necessarily mean a proliferation of multiple tokens with significant share? Or is there a path to a robust, widely used web3 with a highly concentrated set of chains that have significant adoption? Perhaps it could work as long as the biggies are open sourced under permissive licenses, as Bitcoin and Ethereum admittedly are?
+It's worth mentioning here that if we add ether into the mix alongside BTC, they represent 70% of the market combined, according to [CoinMarketCap](https://coinmarketcap.com/) data. That's *a lot* considering the site tracks prices for more than 25,000 tokens.
 
-Post Feb 2017, fell to low 30s.
+Perpetual nerdfights between Bitcoin and Ethereum people aside, the admirable characteristics that both projects share is that they're open sourced under permissive licenses. They also have pretty decentralized ownership, with relatively little involvement by Big Tech.
 
-Post Apr 2018, fell to 35ish.
+If we zoom out, those are all traits of a more democratic, fair web than the one we currently have. So if just those two tokens remain the chief building blocks of web3 for the long haul, maybe that's OK after all.
 
-CoinMarketCap tracks more than 25,000 tokens. Two of them comprise 70% of the $1.2 trillion global token market, and the other 25,000 divvy up the remaining 30%.
+The week's other notable headlines:
 
-- BTC dominance is hovering near 50%. <!-- Check whether it ends Friday above that milestone. Something to keep an eye on, pull the trigger on the story above fitty...  | Bitcoin hit a fresh 12-month high. https://www.coindesk.com/markets/2023/06/23/bitcoin-hits-one-year-high-soars-past-313k/
+- **Ethereum developers are considering** a proposal to raise sharply [the maximum stake](https://www.theblock.co/post/235386/ethereum-developers-consider-raising-validator-limit-from-32-to-2048-eth) a single validator can control on the network.
 
--->
+- **Binance has begun integrating the Lightning Network** for bitcoin [deposits and withdrawals](https://decrypt.co/145378/binance-set-to-integrate-bitcoin-lightning-network-for-deposits-and-withdrawals).
 
-The latest headlines:
+- **Coinbase won a big case before the U.S. Supreme Court.** Justices voted 5-4 [in favor of the exchange](https://www.theblock.co/post/236202/coinbase-celebrates-win-at-us-supreme-court-over-arbitration) in a dispute over its arbitration process for customer disputes.
 
-- A Twitter hacker got 5 yrs for stealing other users' crypto. https://www.coindesk.com/policy/2023/06/23/2020-twitter-hacker-sentence-to-5-years-on-crypto-theft-sim-swapping-scheme/
+- **EDX, a new crypto exchange backed by traditional finance heavyweights** like Charles Schwab, Fidelity, and Citadel, [began trading](https://www.businesswire.com/news/home/20230620110605/en/Digital-Asset-Platform-EDX-Markets-Begins-Trading-and-Completes-New-Funding-Round) on Tuesday.
 
-- Updates on SEC suits against Binance and Coinbase. <!-- Need links -->
+- **Deutsche Bank** applied for a license [in Germany](https://blockworks.co/news/deutsche-bank-crypto-custody-license-germany) to provide crypto custody services to clients.
 
-- New Bloomberg survey on US regulatory hostility to crypto. Every country except Canada scored better than the U.S. Ouch. <!-- Covered in weekly show that airs Tuesday afternoon. Need clip on YouTube. Nathan Dean led the poll. -->
+- **New crypto research from Wall Street analysts:** Bernstein estimated that tokenization of traditional assets like fiat currencies, real estate, and securities could represent [a $5 trillion opportunity](https://www.coindesk.com/business/2023/06/20/tokenization-could-be-a-5t-opportunity-led-by-stablecoins-and-cbdcs-bernstein/) over the next five years. Meanwhile, a new JPMorgan report predicted that only bitcoin miners with low power costs and high usage of sustainable power sources will be [able to survive](https://www.coindesk.com/business/2023/06/23/only-bitcoin-miners-with-low-power-costs-and-high-sustainable-energy-mix-will-survive-jpmorgan/) for the long term.
 
-- Gemini is expanding in Asia. Some links: https://www.theblock.co/post/235624/gemini-expands-singapore-hub-as-it-looks-beyond-the-us-for-crypto-adoption | https://www.coindesk.com/business/2023/06/20/gemini-to-expand-operations-to-asia-pacific/
+- **International Monetary Fund economists** warned that outright bans on cryptocurrencies "may not be effective in the long run" for Latin American and Caribbean countries. In a [blog post](https://www.imf.org/en/News/Articles/2023/06/22/cf-interest-in-cb-digital-currencies-picks-up-in-latam-the-caribbean-while-crypto-use-varies), the IMF recommended regulation and implementation of official digital currencies instead.
 
-- A new exchange backed by Charles Schwab and Citadel is launching. https://www.theblock.co/post/235607/charles-schwab-citadel-backed-crypto-exchange-goes-live-today-wsj | https://blockworks.co/news/tradfi-launches-crypto-exchange
+- **The House Financial Services Committee** will vote on two bills to establish [clearer U.S. crypto regulations](https://www.theblock.co/post/235852/u-s-house-committee-to-vote-on-crypto-stablecoin-legislation-in-july) next month.
 
-- Binance is integrating the Lightning Network for deposits. https://decrypt.co/145378/binance-set-to-integrate-bitcoin-lightning-network-for-deposits-and-withdrawals
+- **Terraform Labs founder Do Kwon** and former chief executive Chang-joon Han were sentenced to [four months' jail time](https://techcrunch.com/2023/06/23/terraform-labs-founder-do-kown-jailed-to-four-months-in-montenegro/) in Montenegro for forging travel documents.
 
-- Deutsche Bank applied for a digital asset license in Germany. https://www.theblock.co/post/235590/deutsche-bank-applies-for-digital-asset-license-with-german-regulator-bloomberg | https://decrypt.co/145387/deutsche-bank-applies-for-digital-asset-custody-license-in-germany-report | https://www.fxstreet.com/cryptocurrencies/news/deutsche-bank-applies-for-crypto-custody-license-202306201203 | https://blockworks.co/news/deutsche-bank-crypto-custody-license-germany
+- **America's Federal Trade Commission** filed a [lawsuit against Amazon](https://www.cnn.com/2023/06/21/business/ftc-sue-amazon-prime/index.html) alleging that its signup and cancellation processes for Prime are deceptive.
 
-- Alibaba's new chairman is "crypto curious." https://www.theblock.co/post/235585/crypto-curious-joseph-tsai-to-take-over-as-chair-at-alibaba
+- **In a New York Times op-ed,** two Harvard Medical School faculty argued that nutrition science [needs more natural experiments](https://www.nytimes.com/2023/06/19/opinion/nutrition-science.html) akin to those in economics.
 
-- Lightning Labs roundtable: https://bitcoinmagazine.com/business/building-lightning-network-companies
-
-- Harlem Bitcoin Community: https://harlembitcoin.com/
-
-- Bernstein says tokenization could be a $5T business opportunity. <!-- https://www.coindesk.com/business/2023/06/20/tokenization-could-be-a-5t-opportunity-led-by-stablecoins-and-cbdcs-bernstein/ -->
-
-- JPM: Ripple legal victory helps either. Hmmm...  <!-- Need link -->
-
-- Politics is interested in crypto even if crypto isn't interested in politics. https://www.coindesk.com/consensus-magazine/2023/06/16/politics-is-interested-in-crypto-even-if-crypto-isnt-interested-in-politics/
-
-- Tribe's CEO on why AI is getting faster adoption than web3: https://venturebeat.com/ai/tribe-ais-ceo-on-why-generative-ai-is-seeing-more-rapid-uptake-by-enterprises-than-web3-and-crypto/
-
-- FTC getting more aggressive on privacy policies, will no longer pretend onus should be on users to slog through them. https://gizmodo.com/ftc-complaint-ai-rewriting-privacy-rules-interview-1850545756
-
-- Nutrition science needs more natural experiments. https://www.nytimes.com/2023/06/19/opinion/nutrition-science.html
-
-- Mark Zuckerberg and Elon Musk are planning an actual fight. https://www.theverge.com/2023/6/21/23769263/mark-zuckerberg-elon-musk-fight-cage-match-worldstar
-
-- JPMorgan analysts predict that only bitcoin minerswith low power costs and high usage of sustainable power sources will be able to survive. https://www.coindesk.com/business/2023/06/23/only-bitcoin-miners-with-low-power-costs-and-high-sustainable-energy-mix-will-survive-jpmorgan/
-
-- Coinbse is losing market share
-
-- Coinbase celebrated a SCOTUS win. https://www.theblock.co/post/236202/coinbase-celebrates-win-at-us-supreme-court-over-arbitration | https://www.coindesk.com/policy/2023/06/23/coinbase-wins-supreme-court-ruling-in-arbitration-lawsuit/
-
-- The IMFF said banning crypto may not be viable long-term, and it encouraged adoption of CBDCs. https://www.theblock.co/post/236199/imf-crypto-ban
-
-- A U.S. House committee will vote on stablecoin legislation in July.  https://www.theblock.co/post/235852/u-s-house-committee-to-vote-on-crypto-stablecoin-legislation-in-july
-
-- Ethereum devs are considering raising the max validator limit sharply. https://www.theblock.co/post/235386/ethereum-developers-consider-raising-validator-limit-from-32-to-2048-eth
-
-- Terraform Labs founder Do Kwon got four months' jail time in Montenegro for tktktktktk. https://techcrunch.com/2023/06/23/terraform-labs-founder-do-kown-jailed-to-four-months-in-montenegro/
-
-- Bored Ape NFT prices are plunging. https://decrypt.co/145947/bored-ape-yacht-club-nft-prices-plunging-why
-
-- McCormack's Bedford bitcoin ambitions. https://www.youtube.com/watch?v=Yn7gaq6F2Jw
-
-- The FTC is suing Amazon over its signup process for Prime. https://www.cnn.com/2023/06/21/business/ftc-sue-amazon-prime/index.html
-
-- Teddy DAO is raising money for charity using NFTs. https://www.coindesk.com/web3/2023/06/20/web3-charity-teddy-dao-is-raising-money-through-daily-nft-auctions/
+- **Web2 is run by idiots.** Elon Musk took to Twitter, and Mark Zuckerberg posted to Instagram to discuss the prospect of fighting one another [in a steel cage](https://www.theverge.com/2023/6/21/23769263/mark-zuckerberg-elon-musk-fight-cage-match-worldstar).
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
 
