Final copy for 25 June 2023

--- a/newsletter/2023-06-25.md
+++ b/newsletter/2023-06-25.md
@@ -1,15 +1,15 @@
-# Tokenomics check
+# Tokenomics check-in
 ## #Web3Weekly: June 18-24, 2023
 
-**For the first time in two years,** bitcoin's valuation represented [more than half](https://www.fxstreet.com/cryptocurrencies/news/bitcoin-dominance-hits-two-year-high-at-51-jeopardizing-altcoin-gains-202306211302) the global token market on Wednesday.
+**For the first time in two years,** bitcoin's valuation [topped 50% share](https://www.fxstreet.com/cryptocurrencies/news/bitcoin-dominance-hits-two-year-high-at-51-jeopardizing-altcoin-gains-202306211302) share of the global token market on Wednesday.
 
 Honestly, the persistence of so-called "bitcoin dominance" has me re-thinking the future of web3 a bit.
 
-I used to think that a maturation of web3 would necessarily lead to a more diversified mix of tokens with significant market share competing with one another. But now I increasingly suspect a concentrated market is here to stay for the long-term, with everyone just building on top of the couple of tokens that truly have significant share.
+I used to think a maturation of web3 would necessarily entail a more diversified mix of tokens with significant market share competing with one another. But now I increasingly suspect a concentrated ecosystem is here to stay for the long-term, with everyone just building atop of the handful of tokens that have significant adoption.
 
-It's worth mentioning here that if we add ether into the mix alongside BTC, they represent 70% of the market combined, according to [CoinMarketCap](https://coinmarketcap.com/) data. That's *a lot* considering the site tracks prices for more than 25,000 tokens.
+It's worth mentioning here that if we add ether into the mix alongside BTC, those two coins represent 70% of the market combined, according to [CoinMarketCap](https://coinmarketcap.com/) data. That's *a lot* considering the site tracks prices for more than 25,000 tokens.
 
-Perpetual nerdfights between Bitcoin and Ethereum people aside, the admirable characteristics that both projects share is that they're open sourced under permissive licenses. They also have pretty decentralized ownership, with relatively little involvement by Big Tech.
+Perpetual nerdfights between Bitcoin and Ethereum people aside, the admirable characteristic that the projects share is that they're both [open sourced](https://opensource.org/osd/) under permissive licenses. They also have pretty decentralized ownership, with [relatively little involvement](https://www.nytimes.com/2021/01/26/technology/big-tech-power-bitcoin.html) by Big Tech.
 
 If we zoom out, those are all traits of a more democratic, fair web than the one we currently have. So if just those two tokens remain the chief building blocks of web3 for the long haul, maybe that's OK after all.
 
@@ -25,9 +25,9 @@ The week's other notable headlines:
 
 - **Deutsche Bank** applied for a license [in Germany](https://blockworks.co/news/deutsche-bank-crypto-custody-license-germany) to provide crypto custody services to clients.
 
-- **New crypto research from Wall Street analysts:** Bernstein estimated that tokenization of traditional assets like fiat currencies, real estate, and securities could represent [a $5 trillion opportunity](https://www.coindesk.com/business/2023/06/20/tokenization-could-be-a-5t-opportunity-led-by-stablecoins-and-cbdcs-bernstein/) over the next five years. Meanwhile, a new JPMorgan report predicted that only bitcoin miners with low power costs and high usage of sustainable power sources will be [able to survive](https://www.coindesk.com/business/2023/06/23/only-bitcoin-miners-with-low-power-costs-and-high-sustainable-energy-mix-will-survive-jpmorgan/) for the long term.
+- **New crypto research from Wall Street analysts:** Bernstein estimated that tokenization of traditional assets like fiat currencies, real estate, and securities could represent [a $5 trillion opportunity](https://www.coindesk.com/business/2023/06/20/tokenization-could-be-a-5t-opportunity-led-by-stablecoins-and-cbdcs-bernstein/) over the next five years. Meanwhile, a new JPMorgan report predicted that only bitcoin miners with low power costs and high usage of sustainable energy will [survive](https://www.coindesk.com/business/2023/06/23/only-bitcoin-miners-with-low-power-costs-and-high-sustainable-energy-mix-will-survive-jpmorgan/) long-term.
 
-- **International Monetary Fund economists** warned that outright bans on cryptocurrencies "may not be effective in the long run" for Latin American and Caribbean countries. In a [blog post](https://www.imf.org/en/News/Articles/2023/06/22/cf-interest-in-cb-digital-currencies-picks-up-in-latam-the-caribbean-while-crypto-use-varies), the IMF recommended regulation and implementation of official digital currencies instead.
+- **International Monetary Fund economists** warned that outright bans on cryptocurrencies "may not be effective in the long run" for Latin American and Caribbean countries. In a [blog post](https://www.imf.org/en/News/Articles/2023/06/22/cf-interest-in-cb-digital-currencies-picks-up-in-latam-the-caribbean-while-crypto-use-varies), the IMF recommended sound crypto regulation and implementation of official digital currencies instead.
 
 - **The House Financial Services Committee** will vote on two bills to establish [clearer U.S. crypto regulations](https://www.theblock.co/post/235852/u-s-house-committee-to-vote-on-crypto-stablecoin-legislation-in-july) next month.
 
