--- a/newsletter/2023-07-09.md
+++ b/newsletter/2023-07-09.md
@@ -1,43 +1,29 @@
-#TKTKTK
+# Crypto Summer
 ## #Web3Weekly: July 2-8, 2023
 
-<hr>
+**I'll be honest.** Now that the calendar has turned to July, part of me wants to take a summer break like when I was a kid. At the same time, I also have some very real, grown-up stuff to do right now, like moving to a new apartment.
 
-*Launching a new token? Our affiliate Bitbond can help. Their [intuitive platform](https://tokentool.bitbond.com) for creating tokens takes you through the process in minutes. No software development experience needed. There's even a 10% discount for #Web3Weekly readers if you enter the code QEHECMGR at checkout. [Try Bitbond today!](https://tokentool.bitbond.com/)*
+Hence I think it's time for a brief hiatus for the newsletter. After this edition, #Web3Weekly will pause publication through August, resuming on our regular every-Sunday schedule on Sept. 3.
 
-<hr>
+Thanks to the subscribers for humoring me on this, and for your interest in the newsletter every week. I promise, #Web3Weekly will be back and better than ever in the fall. ☺️
 
-<!--
+In the meantime, let's get to one last batch of summertime headlines:
 
-Riff on summer break...
+- **The cross-chain platform Multichain** warned users not to use its services after experiencing an unexplained [$126 million outflow](https://www.theblock.co/post/238299/multichain-warning-outflow) of assets. Fallout reverberated throughot the crypto markets following the announcement. Stablecoin issuers Circle and Tether [froze $65 million](https://www.tradingview.com/news/cointelegraph:d2b740eb2094b:0-circle-tether-freezes-over-65m-in-assets-transferred-from-multichain/) in assets tied to the incident. Binance [suspended deposits and withdrawals](https://www.benzinga.com/23/07/33132921/binance-withdraws-support-for-several-tokens-with-links-to-the-multichain-bridge) of eight tokens traded via "bridges" to Multichain's platform.
 
--->
+- **BlackRock CEO Larry Fink** said in [an interview](https://www.youtube.com/watch?v=cX4FvW_Ph_sremarks) with Fox Business Network that bitcoin is displacing gold as a safe haven for investors and could "revolutionize finance". He also expressed optimism that BlockRock's application to offer an exchange-traded fund (ETF) that holds bitcoin will be approved by U.S. regulators. Crypto traders have heavily speculated on such a scenario the last few weeks, bidding bitcoin to a [new 13-month high](https://www.forbes.com/sites/indiarice/2023/07/06/bitcoin-price-briefly-hits-13-month-high-as-blackrock-ceo-fuels-etf-fervor/) above $31,000 per token. FBN noted that BlackRock, one of Wall Street's biggest asset managers, has a track record of 575-1 in winning approvals for new ETFs from the Securities and Exchange Commission.
 
-The latest headlines:
+- **Polygon Labs** announced a [management shakeup](https://www.theblock.co/post/238409/polygon-labs-new-ceo-marc-boiron), including a new CEO, executive chairman, and chief legal officer.
 
-- ETF update(s) Fink... remarks to FBN, maybe other press...
+- **MicroStrategy's chief revenue officer** resigned after a [seven-year run](https://www.theblock.co/post/238339/microstrategy-chief-revenue-officer-resigns-after-nearly-seven-years-there) at the consulting company, which was an early adopter of bitcoin among U.S.-listed firms.
 
-- Multichain warning: https://www.theblock.co/post/238299/multichain-warning-outflow | https://www.theblock.co/post/238459/63-million-in-usdc-frozen-by-circle-following-multichain-breach
+- **K33 Research said** in a new report that the U.S. remains the "center of gravity" for the global web3 industry, with about [30% of total employee headcount](https://decrypt.co/147665/us-still-center-of-gravity-for-crypto-industry-says-k33-research).
 
-- Binance drama: Forbes scoop about departures: https://fortune.com/crypto/2023/07/06/binance-crisis-executives-quit-changpeng-zhao-justice-department/ | https://cryptoslate.com/several-binance-execs-including-cso-patrick-hillman-reportedly-quit-company/ | https://www.coindesk.com/business/2023/07/07/changpeng-zhao-calls-exec-departures-fud/
+- **Unstoppable Domains COO Sandy Carter** writes in Forbes that Nike and Starbucks' NFT-based customer loyalty programs could [become a model](https://www.forbes.com/sites/digital-assets/2023/07/07/how-companies-like-starbucks-and-nike-are-innovating-with-web3-customer-loyalty-programs/) for other brands.
 
-- Fed outlook?
+- **The New York Times** examined how Tom Brady and other celebrities were [roped into endorsing FTX](https://www.nytimes.com/2023/07/06/technology/tom-brady-crypto-ftx.html).
 
-- MicroStrategy's CRO resigned after a seven-year run at the consulting company. https://www.theblock.co/post/238339/microstrategy-chief-revenue-officer-resigns-after-nearly-seven-years-there
-
-- Bloomberg: CFTC is pissed at Celsius.
-
-- Polygon management shakeup: https://decrypt.co/147685/polygon-labs-president-ryan-wyatt-stepping-down | https://www.theblock.co/post/238409/polygon-labs-new-ceo-marc-boiron
-
-- Two popular bitcoin-based NFTs are moving over to the Ethereum chain. https://decrypt.co/147662/bitcoin-brc-20-tokens-now-moving-over-ethereum
-
-- K33 Research says the U.S. is still the "center of gravity" of the global crypto industry, with about 33% of the total workforce headcount in the sector. https://decrypt.co/147665/us-still-center-of-gravity-for-crypto-industry-says-k33-research
-
-- DappRadar: web3 apps gained users in june. https://thedefiant.io/web3-apps-gained-users-in-june-despite-regulatory-challenges-dappradar | TechCrunch: Devs shouldn't promote tokenization features of their games. https://techcrunch.com/2023/07/07/web3-games-dont-need-to-highlight-blockchain-elements-to-succeed/
-
-- Forbes on Nike and SBUX web3 loyalty programs. https://www.forbes.com/sites/digital-assets/2023/07/07/how-companies-like-starbucks-and-nike-are-innovating-with-web3-customer-loyalty-programs/
-
-- NYPL tring to revamp as a cool place to hang out in. https://www.nytimes.com/2023/07/07/nyregion/ny-public-library.html | US beer sales are declining. https://slate.com/business/2023/07/beer-sales-decline-explained-hard-seltzer-craft-beer.html | https://slate.com/business/2023/07/beer-sales-decline-baseball-rules-change-bud-light.html
+- **The Times also reports** that the New York Public Library's landmark midtown branch is revamping itself as "a cool place to hang out" now that no one wants to [work in an actual office](https://www.nytimes.com/2023/07/07/nyregion/ny-public-library.html) in Manhattan.
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
 
