Final edit for 9 July 2023

--- a/newsletter/2023-07-09.md
+++ b/newsletter/2023-07-09.md
@@ -1,13 +1,17 @@
-# Crypto Summer
+# Going evergreen for "Crypto Summer"
 ## #Web3Weekly: July 2-8, 2023
 
 **I'll be honest.** Now that the calendar has turned to July, part of me wants to take a summer break like when I was a kid. At the same time, I also have some very real, grown-up stuff to do right now, like moving to a new apartment.
 
-Hence I think it's time for a brief hiatus for the newsletter. After this edition, #Web3Weekly will pause publication through August, resuming on our regular every-Sunday schedule on Sept. 3.
+Hence I've decided to do our regular news roundup today, then put the newsletter into low-maintenance mode through August.
 
-Thanks to the subscribers for humoring me on this, and for your interest in the newsletter every week. I promise, #Web3Weekly will be back and better than ever in the fall. ☺️
+That means the #Web3Weekly [Twitter account](https://twitter.com/web3weekly) and my regular sharing of newsletter content on [Medium](https://medium.com/@peteramckay) will go dormant. For email subscribers (because you're really my favorite 🙃), I'll be re-sharing each week one of my favorite third-party videos about the basics of web3.
 
-In the meantime, let's get to one last batch of summertime headlines:
+In other words, you'll still hear from me. But the content will be less newsy and more ["evergreen,"](https://www.urbandictionary.com/define.php?term=evergreen) as we used to say when I worked in newspapers.
+
+We'll resume our regular format on Sept. 3, including the news summary and regular social sharing.
+
+Before I go, though, one last batch of summertime headlines:
 
 - **The cross-chain platform Multichain** warned users not to use its services after experiencing an unexplained [$126 million outflow](https://www.theblock.co/post/238299/multichain-warning-outflow) of assets. Fallout reverberated throughot the crypto markets following the announcement. Stablecoin issuers Circle and Tether [froze $65 million](https://www.tradingview.com/news/cointelegraph:d2b740eb2094b:0-circle-tether-freezes-over-65m-in-assets-transferred-from-multichain/) in assets tied to the incident. Binance [suspended deposits and withdrawals](https://www.benzinga.com/23/07/33132921/binance-withdraws-support-for-several-tokens-with-links-to-the-multichain-bridge) of eight tokens traded via "bridges" to Multichain's platform.
 
