minor headline fix

--- a/newsletter/2023-07-16.md
+++ b/newsletter/2023-07-16.md
@@ -1,5 +1,5 @@
 # A blockchain-y classic from Wired
-## #Web3Weekly: TKTKTK, 2023
+## #Web3Weekly: July 9-15, 2023
 
 **Today we start** our summer series highlighting videos about the basics of web3.
 
