--- a/newsletter/2023-07-16.md
+++ b/newsletter/2023-07-16.md
@@ -3,12 +3,10 @@
 
 **Today we start** our summer series highlighting videos about the basics of web3.
 
-Our initial pick was easy: [An excellent explainer](https://www.youtube.com/watch?v=hYip_Vuv8J0) published by Wired in 2017. In the video, entrepreneur Bettina Warburg explains what blockchain technology is at five levels of difficulty, from that of an actual five-year-old up to that of a fellow expert in the field.
+Our initial pick was easy: [an excellent explainer](https://www.youtube.com/watch?v=hYip_Vuv8J0) published by Wired in 2017. In the video, entrepreneur Bettina Warburg covers what blockchain tech is at five levels of difficulty, from that of an actual five-year-old up to that of a fellow expert in the field.
 
 Honestly, I'm still unsure what's more amazing about this video -- that it still holds up so well after several years or that it clearly conveys so much layman-friendly information *in less than 20 minutes.*
 
 If you're just getting started with blockchain, the explainer that Warburg created for Wired is still a truly [fantastic starting point](https://www.youtube.com/watch?v=hYip_Vuv8J0&t=2s).
-
-_**That's it for now! Best wishes for a healthy and productive week ahead.**_  
 
 _**-- Peter A. McKay**_
