copyedits + adding some links

--- a/newsletter/2023-07-30.md
+++ b/newsletter/2023-07-30.md
@@ -5,15 +5,13 @@
 
 Whereas Bitcoin was built strictly as a monetary system, Ethereum was designed from the outset to be a full-fledged app platform. Since its launch in 2019, the network's native token, dubbed "ether" or ETH for short, has grown to a $226 billion valuation, comprising 19% of the global token market, according to [CoinMarketCap data](https://coinmarketcap.com/currencies/ethereum/).
 
-Forbes just posted a nice, layman-friendly discussion of [Ethereum's evolution so far](https://www.youtube.com/watch?v=fKmbxd4MQmk&t=618s). Reporter Rosemarie Miller covers a lot of ground about the platform's history and its future in her chat with entrepreneur Jamiel Shiekh.
+Forbes just posted a nice, layman-friendly discussion of [Ethereum's evolution so far](https://www.youtube.com/watch?v=fKmbxd4MQmk&t=618s). In less than 15 minutes, reporter Rosemarie Miller covers a *lot* of ground about the platform's history and its future through her chat with blockchain entrepreneur Jamiel Shiekh.
 
-As I'm focusing the newsletter on web3 basics this summer, Ethereum was obviously an important topic to touch upon. Highlighting this video, which clocks in at less than 15 minutes, was a great way to do it, I think.
+As I'm focusing the newsletter this summer on high-quality videos covering the basics of web3, this Forbes post struck me as a great one to highlight. ICYMI here are the previous installments in the "basics" series:
 
-ICYMI here are the previous installments in the "basics" series:
+- [Wired magazine's explainer](https://www.youtube.com/watch?v=hYip_Vuv8J0&t=49s) of "what is blockchain," tailored so even a five-year old can understand it.
 
-- Wired magazine's 20-minute explainer of "what is blockchain," tailored so even a five-year old can understand it.
-
-- Author Ben Mezrich telling the "making of" backstory behind his book Bitcoin Billionaires, a classic history of the crypto market's early days.
+- [Author Ben Mezrich telling](https://www.youtube.com/watch?v=kN96Dgih3gI) the "making of" backstory behind his book Bitcoin Billionaires, a classic history of the crypto market's early days.
 
 _**That's it for now! Best wishes for a healthy and productive week ahead.**_  
 
