Fleshing out copy for 3 Sept 2023

--- a/newsletter/2023-09-03.md
+++ b/newsletter/2023-09-03.md
@@ -1,58 +1,33 @@
-# Post-Grayscale, what next for bitcoin?
+# Some lessons for bitcoiners from GLD
 ## #Web3Weekly: Aug. 27 to Sept. 2, 2023
 
-((News hook... Grayscale decision. Yadda yadda yadda...))
+**Bitcoin is always following** in gold's footsteps, it seems.
 
-((Effects on investor interest...))
+Fans of the two assets sometimes [clash](https://intelligencesquared.com/events/debate-bitcoin-vs-gold-with-anthony-scaramucci-and-peter-schiff/) over which currently serves as a better safe haven from inflation and financial crisis. But it's at least indisputable that gold has been playing at the game much *longer* -- for thousands of years, in fact.
 
-((Question is the cause and effect. Did the availability of the GLD fimd draw in investors who otherwise wouldn't have participated in gold? Or did GLD merely track what would've happened anyway due to other factors that would've helped gold, like major economic crises that undermined traditional investments in 2008 and 2020?))
+For the last 19 of them, gold has been readily available to trade in the U.S. in the form of shares in any of several exchange-traded funds (ETFs) that hold the yellow metal on investors' behalf.
 
-((It's hard to say even now. But let it suffice that the availability of an ETF certainly didn't hurt matters for gold's commodity price.))
+ETFs makes it much less cumbersome to own gold as an investment, since the funds effectively work like shares in a single company, changing hands in exactly the same familiar venues, such as the New York Stock Exchange. This setup has thus indisputably widened the audience for gold in America, especially among retail investors.
 
-((It's hard to overstate how inconvenient it was for small investors to get into gold prior to GLD. There were various attempts at e-gold...))
+Now hopes for a similar U.S.-listed ETF holding bitcoin are soaring. The catalyst: Grayscale Investments' courtroom victory [over the Securities and Exchange Commission](https://www.forbes.com/sites/digital-assets/2023/08/29/grayscale-lands-court-victory-over-sec-in-battle-for-spot-bitcoin-etf/) in federal court on Tuesday. A three-judge panel agreed with Grayscale that the SEC has not adequately explained its previous decision to block Grayscale from from offering a bitcoin ETF.
 
-((No innovation has ever revived gold's role as money for daily payments.))
+As someone who [covered](https://www.wsj.com/articles/SB110194198185388535) the launch of gold ETFs for the Wall Street Journal's in the early 2000s, I do think a bitcoin fund could be transformative in some ways. In others, I think it might disappoint the "laser eyes" set, though.
 
-((Crypto's UI problem))
+A few educated guesses based on gold's ETF adventures:
 
-((New trust will almost inevitably become a whale. However, it will be the most transparent, market-neutral whale we've ever seen. This should in turn diminish slightly the power of the more common loud-mouthed, manipulative species of bitcoin whale we're all more accustomed to seeing, which is just fine by me.))
+- **There will be inflows.** Bitcoiners are probably right to anticipate that the launch of a new ETF, or [several](https://www.reuters.com/technology/grayscale-victory-big-boost-decade-long-spot-bitcoin-etf-push-2023-08-30/), will mean a lot of new buying of the BTC token itself. In late 2004, when the most popular gold ETF launched under the stock ticker [GLD](https://tinyurl.com/y2hctbsk), it skyrocketed over $1 billion in assets in its first [three days of trading](https://finance.yahoo.com/news/first-u-gold-backed-etf-204945038.html). The fund's valuation has since grown to [$56 billion](https://duckduckgo.com/?q=current+metal+holdings+GLD+trust&t=brave&ia=stock) as of Friday's close, so that's essentially the amount of gold it has to hold to back the shares in GLD. More on that in a moment.
 
--- Marketwatch coverage of GLD's 10-year anniversary: https://www.marketwatch.com/story/how-gold-etfs-have-transformed-market-in-10-years-2013-03-29
+- **We're going to need a bigger boat.** If ETF-related buying of bitcoin shapes up as it did in gold, or surpasses it, the trust backing any popular bitcoin ETF would automatically constitute a new kind of ["whale"](https://www.investopedia.com/terms/b/bitcoin-whale.asp) in the underlying BTC token market. It will be the most transparent, [market-neutral](https://www.investopedia.com/terms/m/marketneutral.asp) whale we've ever seen, which in turn would diminish slightly the power of the more [loud-mouthed](https://www.youtube.com/results?search_query=%22michael+saylor%22+interview&sp=CAI%253D), [manipulative](https://www.vox.com/recode/2021/5/18/22441831/elon-musk-bitcoin-dogecoin-crypto-prices-tesla) species of whale we're more accustomed to seeing in BTC. This would be something to celebrate indeed, in my opinion.
 
--- From VettaFi, a brief history of ETFs: https://etfdb.com/etf-industry/a-brief-history-of-etfs/
+- **But there are limitations.** Although GLD's stock-market valuation is nothing to sneeze at in absolute terms, we should also note it's about 0.4% of gold's global valuation [as a commodity](https://companiesmarketcap.com/gold/marketcap/#:~:text=Estimated%20Market%20Cap%3A%20%2412.973%20T&text=This%20value%20was%20obtained%20by,Council%20(End%2D2021). In other words, although GLD is certainly a notable component of the broader gold market, it's by no means become the main driver over time. Assuming a similar long-term dynamic plays out in bitcoin, any cryptoheads hoping that an ETF will trigger true [hyper-bitcoinization](https://www.coindesk.com/tech/2022/11/03/hyperbitcoinization-is-a-few-years-away-predicts-samson-mow/) of the global economy will probably be disappointed.
 
-When it launched in 2004, GLD garnered over $1 billion in assets in its first [three days of trading](https://finance.yahoo.com/news/first-u-gold-backed-etf-204945038.html).
+- **Is this your UI fix?** It's conceivable that an ETF could become a primary vehicle for non-geeks interested in using bitcoin as a financial store of value. An ETF would allow them to do that without the hassle of managing encryption keys and so forth. In effect, the ETF could become these users' primary user interface for the token.
 
+That said, a bitcoin ETF would do nothing to help with the user interface for *payments*. Gold also faced that problem in the early 2000s, when some startups tried to offer gold-linked cards or other products to enable daily consumer spending via gold. But none of those things ever quite caught on like GLD did as a financial vehicle.  
 
--- Yahoo Finance data on GLD: https://tinyurl.com/y2hctbsk
+On the bright side, we might also say payments are where the opportunities will remain (and probably grow) for bitcoin developers over time. The "store of value" use case is at least pretty close to being solved, if it isn't already.
 
--- From May '23, a bullish analyst note on SeekingAlpha re: GLD. Includes commentary on its effect on the broader gold market: https://seekingalpha.com/article/4603308-gld-gold-prices-up-seven-fold-this-century-best-to-come
-
--- Yahoo Finance data on SPX: https://tinyurl.com/2cs4ybac
-
--- History of the GLD ETF as a possible hint about the future of the bitcoin ETF.
-
--- From WGC, July '23 was a mixed month for gold: https://www.gold.org/goldhub/research/gold-market-commentary-july-2023 | Month-end coverage from investing.com: https://finance.yahoo.com/news/gold-futures-back-2-000-144228222.html
-
--- Motley Fool page on GLD, including performance vs S&P: https://www.fool.com/quote/nysemkt/gld/
-
--- Investopedia has a good article/overview on gold-related ETFs, including not only GLD but competitors as well. https://www.fool.com/quote/nysemkt/gld/
-
--- In 2019, Michael Burry, famous short seller in the Big Short, compared index ETFs to the mortgage instruments that caused the 2008 crisis. Seeking Alpha covered at https://seekingalpha.com/article/4290028-parallels-of-index-funds-to-subprime-cdos | Search results for other coverage: https://duckduckgo.com/?q=Michael+Burry+remarks+index+ETFs+2019&t=brave&ia=web&iai=https%3A%2F%2Fwww.benzinga.com%2Fetfs%2Fbroad-u-s-equity-etfs%2F23%2F08%2F33991541%2Fif-you-invested-1-000-in-spy-and-qqq-when-michael-burry-went-big-short-in-2020-heres-h
-
-
---
-Daniel Kuhn for CoinDesk (https://www.coindesk.com/consensus-magazine/2023/08/29/the-real-reasons-the-grayscale-bitcoin-etf-decision-matters/)
-
-"...The U.S. Court of Appeals has shown that the SEC is not the ultimate arbiter of crypto. The agency does not necessarily or automatically get the final word; the U.S. court system and better yet Congress can also offer legal interpretations. This is significant because of the boom and bluster coming out of SEC Chair Gary Gensler since he took office, and his willingness to say all of crypto – except bitcoin – is under the agency's remit."
-
-"In reality, there are major overhanging questions as to whether the SEC has proper jurisdiction over digital assets. This is one of the main points of contention discussed in the much-watched Lummis-Gillibrand “Responsible Financial Innovation” bill moving through Congress, which emphasizes crypto’s “commodity-like” attributes and so would raise up the U.S. Commodity Futures Trading Commission (CFTC) as a regulator."
-
-There's no way around this: The CFTC is a more permissive regulator than the SEC. It's also generally viewed like a little brother, although it's ostensibly an equal peer.
-
-Philosophical difference: The SEC is more strictly proscriptive in its approach whereas the CFTC is more principle-based.
-
-The week's other notable headlines:
+Some other notable headlines:
 
 - **Patience pays.** According to [a new whitepaper](https://s3.amazonaws.com/static.bitwiseinvestments.com/Research/Bitcoins-Role-in-a-Traditional-Portfolio-08-2023.pdf) by fund manager Bitwise, a conservative allocation of bitcoin (2.5%) would have improved the three-year return of a traditional portfolio comprising 60% stocks and 40% bonds in *every* three-year period going back to 2014. The strategy also was effective in 90% of two-year periods and 70% of one-year periods studied.
 
@@ -62,9 +37,7 @@ The week's other notable headlines:
 
 - **Trading volume in non-fungible tokens** hit a two-year low. During the downturn, Blur has overtaken OpenSea as the most-active venue for buying and selling NFTs. ([crypto.news](https://crypto.news/nft-market-witnesses-lowest-transaction-volume-in-two-years/))
 
-- **Scientists recently revived a 46,000-year-old microscopic roundworm** found in Siberia's permafrost. The organism's survival could provide hints as to how other creatures, including humans, might survive climate change. ([Washington Post](https://www.washingtonpost.com/science/2023/07/27/nematode-revived-siberian-permafrost/))
-
-<!-- Re-work boilerplate. This is the old version for now, but could really use some brushing up... -->
+- **New York Times columnist Farhad Manjoo** says Kia and Hyundai vehicles are ["ridiculously easy to steal"](https://www.nytimes.com/2023/09/01/opinion/kia-hyundai-tiktok.html) due to those manufacturers' exceptional reluctance to install electronic anti-theft devices as a standard feature. Hmmm...
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
